# rust-py-rate-limit

./: .gitignore  BACKLOG.md  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: CI.yml  release.yml
examples/: basic_usage.py  decorator_usage.py  fastapi_app.py
examples/django_example/: README.md
python/rust_py_rate_limit/: __init__.py  decorators.py  django.py  exceptions.py  fastapi.py  flask.py
src/: entry.rs  errors.rs  fixed_window.rs  lib.rs  rate_limiter.rs  sliding_window.rs  stats.rs  time_utils.rs  token_bucket.rs
tests/: test_decorator.py  test_django.py  test_fastapi.py  test_fixed_window.py  test_remaining.py  test_reset.py  test_sliding_window.py  test_stats.py
