[package]
name = "rust_py_rate_limit"
version = "0.1.0"
edition = "2021"
description = "Fast local rate limiting for Python, powered by Rust."
license = "MIT"
repository = "https://github.com/robertolima/rust-py-rate-limit"
readme = "README.md"

[lib]
name = "_core"
crate-type = ["cdylib", "rlib"]

# NOTE: the `extension-module` feature is intentionally NOT enabled here.
# `maturin` enables it (see `[tool.maturin].features` in pyproject.toml) when
# building the wheel, while `cargo test` links against libpython so the unit
# tests can run as a normal binary.
[dependencies]
pyo3 = { version = "0.23" }
dashmap = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[profile.release]
lto = true
codegen-units = 1
